# rust-mongo-web-service

./: Cargo.toml  README.md  docker-compose.yml
src/: books_service.rs  main.rs  mongo_service.rs  practice.rs  routes.rs
src/controllers/: mod.rs  test_mongo_controller.rs
src/services/: mod.rs  mongo_service.rs
