[package]
name = "cli-practice"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "This package is meant to be an example as to how individuals can implement MongoDB driver and Actix-Web with Rust"
repository = "https://github.com/HarrisonHemstreet/rust-mongo-web-service"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
# futures_util = "0.3"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["tokio-runtime"]
